2005-06-22  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* configure.in:

	Abort if mcs is not present.
	
	* PluginLib/IPlayer.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/ImportDialog.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Extend plugin API with support for adding, removing, and syncing files.
	Based on the work of James Willcox <snorp@snorp.net>.

	A plugins/Inotify.cs:
	A plugins/InotifyPlugin.cs:
	A plugins/InotifyPlugin.dll.config.in:
	* plugins/Makefile.am:
	A plugins/inotify-glue.c: (read_int), (inotify_glue_init),
	(inotify_glue_watch), (inotify_glue_ignore),
	(inotify_snarf_events):
	A plugins/inotify.h:

	Added inotify plugin by same James Willcox. Installed by default.

2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* src/PlaylistWindow.cs:

	Emit SongChangedEvent before TickEvent when changing songs.

2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* configure.in:

	Pass '-debug' instead of '-g' to mcs.
	
	* doc/en/Muine.DBusLib/Player.xml:
	* doc/en/Muine.PluginLib/IPlayer.xml:

	Updated documentation.
	
	* src/SongDatabase.cs:
	* plugins/TrayIcon.cs:

	Remove unused functions.
	
	* src/AddWindow.cs:
	* src/ProgressWindow.cs:
	* src/SkipToWindow.cs:

	Mark glade-connected callbacks as public to silence compiler
	warnings.

2005-06-14  Jorn Baayen  <jorn@openedhand.com>

	* configure.in:

	Depend on Gtk 2.6 and gnome-icon-theme 2.10.

	* data/images/Makefile.am:
	R data/images/muine-volume-max.png:
	R data/images/muine-volume-medium.png:
	R data/images/muine-volume-min.png:
	R data/images/muine-volume-zero.png:
	* src/VolumeButton.cs:
	* src/StockIcons.cs:

	Take volume icons from the icon theme instead.

	* src/About.cs:

	Remove unused variable.

	* data/glade/PlaylistWindow.glade:
	* data/glade/ProgressWindow.glade:
	* libmuine/Makefile.am:
	R libmuine/rb-ellipsizing-label.c:
	R libmuine/rb-ellipsizing-label.h:
	* src/Actions.cs: