@@ -1,3 +1,7 @@
+2005-07-06  James Willcox  <snorp@snorp.net>
+
+	* libmuine/metadata.c: (metadata_load): handle a NULL mime type
+
 2005-06-22  Marcel Telka  <marcel@telka.sk>
 
 	* configure.in (ALL_LINGUAS): Added sk.
